RESOLVED FIXED75530
[Mac]Fix build after changeset 103997
https://bugs.webkit.org/show_bug.cgi?id=75530
Summary [Mac]Fix build after changeset 103997
Mihnea Ovidenie
Reported 2012-01-04 01:12:23 PST
Changeset 103997 for WebKit Bug https://bugs.webkit.org/show_bug.cgi?id=75493, renamed PlatformEventFactory to PlatformEventFactoryMac. Some files in WebKit/WebKit2 include PlatformEventFactory.h.
Attachments
Patch (3.68 KB, patch)
2012-01-04 01:15 PST, Mihnea Ovidenie
no flags
Mihnea Ovidenie
Comment 1 2012-01-04 01:15:47 PST
Andreas Kling
Comment 2 2012-01-04 01:22:37 PST
Comment on attachment 121080 [details] Patch rs=me How did this not break the bot? :$
WebKit Review Bot
Comment 3 2012-01-04 01:37:14 PST
Comment on attachment 121080 [details] Patch Clearing flags on attachment: 121080 Committed r104022: <http://trac.webkit.org/changeset/104022>
WebKit Review Bot
Comment 4 2012-01-04 01:37:18 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.