[Mac]Fix build after changeset 103997 https://bugs.webkit.org/show_bug.cgi?id=75530

Reviewed by Andreas Kling.

Source/WebKit/mac:

* WebView/WebFrame.mm:
* WebView/WebHTMLView.mm:
* WebView/WebPDFView.mm:
* WebView/WebView.mm:

Source/WebKit2:

* UIProcess/API/mac/WKView.mm:


git-svn-id: svn://svn.chromium.org/blink/trunk@104022 bbb929c8-8fbe-4397-9dbb-9b2b20218538