third_party/WebKit/Source/WebKit/mac/WebView/WebFrame.mm
@@ -77,7 +77,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #import <WebCore/HitTestResult.h>
 #import <WebCore/LegacyWebArchive.h>
 #import <WebCore/Page.h>
-#import <WebCore/PlatformEventFactory.h>
+#import <WebCore/PlatformEventFactoryMac.h>
 #import <WebCore/PluginData.h>
 #import <WebCore/PrintContext.h>
 #import <WebCore/RenderLayer.h>
